hphp/hack/test/typecheck/coeffects/rx_no_unsafe.php.exp
File "rx_no_unsafe.php", line 12, characters 3-13:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "rx_no_unsafe.php", line 10, characters 17-20:
  From this declaration, the context of this function body provides the capability set {IO, Rx}
  File "rx_no_unsafe.php", line 6, characters 21-30:
  But the function being called requires the capability set {CippGlobal, Globals, IO, RxLocal, UnrestrictedMutation}
File "rx_no_unsafe.php", line 16, characters 3-9:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "rx_no_unsafe.php", line 15, characters 20-23:
  From this declaration, the context of this function body provides the capability Server
  File "rx_no_unsafe.php", line 10, characters 17-20:
  But the function being called requires the capability set {IO, Rx}
File "rx_no_unsafe.php", line 21, characters 3-11:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "rx_no_unsafe.php", line 20, characters 21-22:
  From this declaration, the context of this function body provides the capability set {}
  File "rx_no_unsafe.php", line 15, characters 19-24:
  But the function being called requires the capability Server
